Upgrade macOS code to JDK 20