@@ -7,15 +7,14 @@
 
 package net.codecrete.usb.macos;
 
+import net.codecrete.usb.common.ScopeCleanup;
 import net.codecrete.usb.macos.gen.corefoundation.CoreFoundation;
 import net.codecrete.usb.macos.gen.iokit.IOKit;
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 
-import static java.lang.foreign.MemoryAddress.NULL;
+import static java.lang.foreign.MemorySegment.NULL;
 import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_INT;
 
@@ -23,23 +22,23 @@ import static java.lang.foreign.ValueLayout.JAVA_INT;
  * Constants and helper functions for the IOKit framework.
  */
 public class IoKitHelper {
-    public static final MemoryAddress kIOUSBDeviceUserClientTypeID = UUID.CreateCFUUID(
+    public static final MemorySegment kIOUSBDeviceUserClientTypeID = UUID.CreateCFUUID(
             new byte[]{(byte) 0x9d, (byte) 0xc7, (byte) 0xb7, (byte) 0x80, (byte) 0x9e, (byte) 0xc0, (byte) 0x11,
                     (byte) 0xD4, (byte) 0xa5, (byte) 0x4f, (byte) 0x00, (byte) 0x0a, (byte) 0x27, (byte) 0x05,
                     (byte) 0x28, (byte) 0x61});
-    public static final MemoryAddress kIOUSBInterfaceUserClientTypeID = UUID.CreateCFUUID(
+    public static final MemorySegment kIOUSBInterfaceUserClientTypeID = UUID.CreateCFUUID(
             new byte[]{(byte) 0x2d, (byte) 0x97, (byte) 0x86, (byte) 0xc6, (byte) 0x9e, (byte) 0xf3, (byte) 0x11,
                     (byte) 0xD4, (byte) 0xad, (byte) 0x51, (byte) 0x00, (byte) 0x0a, (byte) 0x27, (byte) 0x05,
                     (byte) 0x28, (byte) 0x61});
-    public static final MemoryAddress kIOUSBDeviceInterfaceID100 = UUID.CreateCFUUID(
+    public static final MemorySegment kIOUSBDeviceInterfaceID100 = UUID.CreateCFUUID(
             new byte[]{(byte) 0x5c, (byte) 0x81, (byte) 0x87, (byte) 0xd0, (byte) 0x9e, (byte) 0xf3, (byte) 0x11,
                     (byte) 0xD4, (byte) 0x8b, (byte) 0x45, (byte) 0x00, (byte) 0x0a, (byte) 0x27, (byte) 0x05,
                     (byte) 0x28, (byte) 0x61});
-    public static final MemoryAddress kIOUSBInterfaceInterfaceID100 = UUID.CreateCFUUID(
+    public static final MemorySegment kIOUSBInterfaceInterfaceID100 = UUID.CreateCFUUID(
             new byte[]{(byte) 0x73, (byte) 0xc9, (byte) 0x7a, (byte) 0xe8, (byte) 0x9e, (byte) 0xf3, (byte) 0x11,
                     (byte) 0xD4, (byte) 0xb1, (byte) 0xd0, (byte) 0x00, (byte) 0x0a, (byte) 0x27, (byte) 0x05,
                     (byte) 0x28, (byte) 0x61});
-    public static final MemoryAddress kIOCFPlugInInterfaceID = UUID.CreateCFUUID(
+    public static final MemorySegment kIOCFPlugInInterfaceID = UUID.CreateCFUUID(
             new byte[]{(byte) 0xC2, (byte) 0x44, (byte) 0xE8, (byte) 0x58, (byte) 0x10, (byte) 0x9C, (byte) 0x11,
                     (byte) 0xD4, (byte) 0x91, (byte) 0xD4, (byte) 0x00, (byte) 0x50, (byte) 0xE4, (byte) 0xC6,
                     (byte) 0x42, (byte) 0x6F});
@@ -56,23 +55,23 @@ public class IoKitHelper {
      * @param interfaceId the interface ID
      * @return the interface, or <code>null</code> if the plugin type or interface is not available
      */
-    public static MemoryAddress getInterface(int service, Addressable pluginType, MemoryAddress interfaceId) {
-        try (var session = MemorySession.openConfined()) {
+    public static MemorySegment getInterface(int service, MemorySegment pluginType, MemorySegment interfaceId) {
+        try (var arena = Arena.openConfined()) {
             // MemorySegment for holding IOCFPlugInInterface**
-            var plugHolder = session.allocate(ADDRESS, NULL);
+            var plugHolder = arena.allocate(ADDRESS, NULL);
             // MemorySegment for holding score
-            var score = session.allocate(JAVA_INT, 0);
+            var score = arena.allocate(JAVA_INT, 0);
             int ret = IOKit.IOCreatePlugInInterfaceForService(service, pluginType, kIOCFPlugInInterfaceID,
                     plugHolder, score);
             if (ret != 0)
                 return null;
-            var plug = (MemoryAddress) plugHolder.get(ADDRESS, 0);
+            var plug = plugHolder.get(ADDRESS, 0);
 
-            // MemorySegment for holding xxxInterface**
-            var intfHolder = session.allocate(ADDRESS, NULL);
             // UUID bytes
-            var refiid = CoreFoundation.CFUUIDGetUUIDBytes(session, interfaceId);
-            ret = IoKitUSB.QueryInterface(plug, refiid, intfHolder.address());
+            var refiid = CoreFoundation.CFUUIDGetUUIDBytes(arena, interfaceId);
+            // MemorySegment for holding xxxInterface**
+            var intfHolder = arena.allocate(ADDRESS, NULL);
+            ret = IoKitUSB.QueryInterface(plug, refiid, intfHolder);
             IoKitUSB.Release(plug);
             if (ret != 0)
                 return null;
@@ -92,24 +91,24 @@ public class IoKitHelper {
      */
     public static Integer getPropertyInt(int service, String key) {
 
-        var cfKey = CoreFoundationHelper.createCFStringRef(key);
-        var value = IOKit.IORegistryEntryCreateCFProperty(service, cfKey, NULL, 0);
-        if (value == NULL)
-            return null;
+        try (var cleanup = new ScopeCleanup()) {
+            var value = getPropertyValue(service, key, cleanup);
+            if (value == null)
+                return null;
 
-        Integer result = null;
-        var type = CoreFoundation.CFGetTypeID(value);
-        if (type == CoreFoundation.CFNumberGetTypeID()) {
+            Integer result = null;
+            var type = CoreFoundation.CFGetTypeID(value);
+            if (type == CoreFoundation.CFNumberGetTypeID()) {
 
-            try (var session = MemorySession.openConfined()) {
-                var numberValue = session.allocate(JAVA_INT, 0);
-                if (CoreFoundation.CFNumberGetValue(value, CoreFoundation.kCFNumberSInt32Type(), numberValue) != 0)
-                    result = numberValue.get(JAVA_INT, 0);
+                try (var arena = Arena.openConfined()) {
+                    var numberValue = arena.allocate(JAVA_INT, 0);
+                    if (CoreFoundation.CFNumberGetValue(value, CoreFoundation.kCFNumberSInt32Type(), numberValue) != 0)
+                        result = numberValue.get(JAVA_INT, 0);
+                }
             }
-        }
 
-        CoreFoundation.CFRelease(value);
-        return result;
+            return result;
+        }
     }
 
     /**
@@ -124,26 +123,38 @@ public class IoKitHelper {
      */
     public static String getPropertyString(int service, String key) {
 
+        try (var cleanup = new ScopeCleanup()) {
+            var value = getPropertyValue(service, key, cleanup);
+            if (value == null)
+                return null;
+
+            String result = null;
+            var type = CoreFoundation.CFGetTypeID(value);
+            if (type == CoreFoundation.CFStringGetTypeID())
+                result = CoreFoundationHelper.stringFromCFStringRef(value);
+
+            return result;
+        }
+    }
+
+    private static MemorySegment getPropertyValue(int service, String key, ScopeCleanup cleanup) {
         var cfKey = CoreFoundationHelper.createCFStringRef(key);
+        cleanup.add(() -> CoreFoundation.CFRelease(cfKey));
+
         var value = IOKit.IORegistryEntryCreateCFProperty(service, cfKey, NULL, 0);
-        if (value == NULL)
+        if (value.address() == 0)
             return null;
+        cleanup.add(() -> CoreFoundation.CFRelease(value));
 
-        String result = null;
-        var type = CoreFoundation.CFGetTypeID(value);
-        if (type == CoreFoundation.CFStringGetTypeID())
-            result = CoreFoundationHelper.stringFromCFStringRef(value);
-
-        CoreFoundation.CFRelease(value);
-        return result;
+        return value;
     }
 
     // debugging aid
-    public static int getRefCount(MemoryAddress self) {
-        try (var session = MemorySession.openConfined()) {
-            var object = MemorySegment.ofAddress(self, 16, session);
+    public static int getRefCount(MemorySegment self) {
+        try (var arena = Arena.openConfined()) {
+            var object = MemorySegment.ofAddress(self.address(), 16, arena.scope());
             var dataAddr = object.get(ADDRESS, ADDRESS.byteSize());
-            var data = MemorySegment.ofAddress(dataAddr, 12, session);
+            var data = MemorySegment.ofAddress(dataAddr.address(), 12, arena.scope());
             return data.get(JAVA_INT, 8);
         }
     }
